# MGNU

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_test.cpp
inc/: BooleanMatrix.hpp  typesData.hpp
motivation/: task
src/: BooleanMatrix.cpp
src/boolean_matrix/: BooleanMatrix.cpp  BooleanMatrix.hpp
